--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -33,7 +33,7 @@
         <form autocomplete="on" id="myForm" action="#">
        
        	<div class="w3-section">
-        <label>First Name  *</label>
+        <label>Best Name  *</label>
         <input class="w3-input w3-border" type="text" name="first" id="first" required autofocus>
         </div>
        
