--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -6,7 +6,7 @@
 
 <html>
 <head>
-    <title>Please work</title>
+    <title>PPlease work</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -21,7 +21,7 @@
     .button {display:inline; word-wrap: break-word;}
     #myForm {border:3px solid #A9A9F5;}
     label {color: #DF013A;}
-    </style> 
+    </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 
         </head>
