--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -6,7 +6,7 @@
 
 <html>
 <head>
-    <title>2Please work</title>
+    <title>Please work</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -28,7 +28,7 @@
         <body>
 
         <div class="w3-container" id="contact" style="margin-top:75px">
-        <h1 class="w3-xxxlarge"><b>Survey</b></h1>
+        <h1 class="w3-xxxlarge"><b>Survey2</b></h1>
         <br>
         <form autocomplete="on" id="myForm" action="#">
 
