--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <style>
     body,h1,h2,h3,h4,h5 {font-family: "Poppins", sans-serif}
-    body {font-size:16px;background-color: black}
+    body {font-size:16px;background-color: red}
     h1 {color: #2E9AFE;border:5px solid #0000FF;box-shadow: 5px 10px #888888; display:inline }
     .w3-half img{margin-bottom:-6px;margin-top:16px;opacity:0.8;cursor:pointer}
     .w3-half img:hover{opacity:1}
